# hop-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README-EN.md  README.md  config.docker.toml  config.example.toml  docker-entrypoint.sh  task.md
.github/workflows/: ci.yml
crates/hop-cli/: Cargo.toml
crates/hop-cli/src/: config.rs  main.rs  ssh_exec.rs
crates/hop-core/: Cargo.toml
crates/hop-core/src/: config.rs  crypto.rs  db.rs  errors.rs  lib.rs  models.rs
crates/hop-server/: Cargo.toml
crates/hop-server/src/: main.rs
crates/hop-server/src/admin/: auth.rs  bootstrap.rs  html.rs  i18n.rs  local_cli.rs  mod.rs  routes.rs  transfer.rs
crates/hop-server/src/ssh/: bridge.rs  client.rs  host_key.rs  mod.rs  proxy.rs  routes.rs  server.rs  session_registry.rs  tofu.rs
crates/hop-server/src/tui/: app.rs  backend.rs  input.rs  mod.rs  views.rs
docs/: deployment.md  design.md  task.md
docs/superpowers/plans/: 2026-06-08-rdp-assets.md  2026-06-23-admin-web-ci-release.md
migrations/: 001_init.sql  002_asset_protocol.sql  003_asset_tcp_preset.sql  004_authorized_key_assets.sql
scripts/: manual_e2e_key_asset_access.sh  manual_e2e_openssh.sh  manual_e2e_sftp.sh
systemd/: hop.service
web/admin/: .gitignore  README.md  index.html  package-lock.json  package.json
web/admin/src/: main.ts  styles.css
